--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: sysfonts
 Type: Package
-Title: Loading system fonts into R
-Version: 0.2
-Date: 2014-02-22
+Title: Loading System Fonts into R
+Version: 0.3
+Date: 2014-12-22
 Author: Yixuan Qiu and authors/contributors of the
     included fonts. See file AUTHORS for details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
 Description: This package uses FreeType to load system fonts
-    and Google Fonts(https://www.google.com/fonts) into R,
-    mainly used to support other packages like R2SWF
+    and Google Fonts (https://www.google.com/fonts) into R.
+    It is supposed to support other packages like R2SWF
     and showtext.
-Suggests:
-    jsonlite
+Suggests: jsonlite
 Copyright: see file COPYRIGHTS
 SystemRequirements: zlib, libpng, FreeType
 URL: https://github.com/yixuan/sysfonts
