--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: sysfonts
 Type: Package
-Title: Loading System Fonts into R
-Version: 0.5
-Date: 2015-04-24
+Title: Loading Fonts into R
+Version: 0.6
+Date: 2017-07-07
 Author: Yixuan Qiu and authors/contributors of the
     included fonts. See file AUTHORS for details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
-Description: Using 'FreeType' to load system fonts
-    and Google Fonts (https://www.google.com/fonts) into R.
-    It is supposed to support other packages such as 'R2SWF'
-    and 'showtext'.
-Suggests: RCurl, jsonlite
+Description: Loading system fonts and Google Fonts
+    (https://fonts.google.com/) into R, in order to
+    support other packages such as 'R2SWF' and 'showtext'.
+Suggests: curl, jsonlite
 Copyright: see file COPYRIGHTS
 SystemRequirements: zlib, libpng, FreeType
 URL: https://github.com/yixuan/sysfonts
 BugReports: https://github.com/yixuan/sysfonts/issues
 License: GPL-2
+RoxygenNote: 6.0.1
