--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: sysfonts
 Type: Package
 Title: Loading Fonts into R
 Version: 0.8.9
-Date: 2024-02-27
+Date: 2024-03-02
 Author: Yixuan Qiu and authors/contributors of the
     included fonts. See file AUTHORS for details.
 Maintainer: Yixuan Qiu <yixuan.qiu@cos.name>
@@ -15,4 +15,5 @@ SystemRequirements: zlib, libpng, FreeType
 URL: https://github.com/yixuan/sysfonts
 BugReports: https://github.com/yixuan/sysfonts/issues
 License: GPL-2
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
+Encoding: UTF-8
